--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,15 @@
 /Java/Javaejercicio13/build/
 /Java/JavaEjercicio14/nbproject/private/
 /Java/JavaEjercicio14/build/
+/Java/JavaEjercicio15/nbproject/private/
+/Java/JavaEjercicio15/build/
+/Java/JavaEjercicio16/nbproject/private/
+/Java/JavaEjercicio16/build/
+/Java/JavaEjercicio17/nbproject/private/
+/Java/JavaEjercicio17/build/
+/Java/JavaEjercicio18/nbproject/private/
+/Java/JavaEjercicio18/build/
+/Java/JavaEjercicio19/nbproject/private/
+/Java/JavaEjercicio19/build/
+/Java/JavaEjercicio20/nbproject/private/
+/Java/JavaEjercicio20/build/
