Java POO Encuentro 3

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,5 @@
 /Java/JavaPOOEjercicios/JavaPOOEjer3/build/
 /Java/JavaPOOEjercicios/JavaPOOEjer4/nbproject/private/
 /Java/JavaPOOEjercicios/JavaPOOEjer4/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer5/nbproject/private/
+/Java/JavaPOOEjercicios/JavaPOOEjer5/build/
