Java POO encuentro 4

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,6 @@
 /Java/JavaPOOEjercicios/JavaPOOEjer4/build/
 /Java/JavaPOOEjercicios/JavaPOOEjer5/nbproject/private/
 /Java/JavaPOOEjercicios/JavaPOOEjer5/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer6/nbproject/private/
+/Java/JavaPOOEjercicios/JavaPOOEjer6/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer7/nbproject/private/
