Java POO Encuentro 7

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,7 @@
 /Java/JavaPOOEjercicios/JavaPOOEjer8/build/
 /Java/JavaPOOEjercicios/JavaPOOEjer9/nbproject/private/
 /Java/JavaPOOEjercicios/JavaPOOEjer9/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer10/nbproject/private/
+/Java/JavaPOOEjercicios/JavaPOOEjer10/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer11/nbproject/private/
+/Java/JavaPOOEjercicios/JavaPOOEjer11/build/
