Java POO Encuentro 8

--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,7 @@
 /Java/JavaPOOEjercicios/JavaPOOEjer10/build/
 /Java/JavaPOOEjercicios/JavaPOOEjer11/nbproject/private/
 /Java/JavaPOOEjercicios/JavaPOOEjer11/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer12/nbproject/private/
+/Java/JavaPOOEjercicios/JavaPOOEjer12/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer13/nbproject/private/
+/Java/JavaPOOEjercicios/JavaPOOEjer13/build/
