Java POO Encuentro 9

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@
 /Java/JavaPOOEjercicios/JavaPOOEjer12/build/
 /Java/JavaPOOEjercicios/JavaPOOEjer13/nbproject/private/
 /Java/JavaPOOEjercicios/JavaPOOEjer13/build/
+/Java/JavaPOOEjercicios/JavaPOOEjer14/nbproject/private/
