Java POO Encuentro 19

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,5 @@
 /Java/JavaPOOEjerciciosExtras/Meses/nbproject/private/
 /Java/JavaPOOEjerciciosExtras/Guia8_ejExtra03/nbproject/private/
 /Java/JavaPOOEjerciciosExtras/Guia8_ejExtra03/build/
+/Java/JavaPOOActividadesExtras/JavaPOOActividadExtra3-1/nbproject/private/
+/Java/JavaPOOActividadesExtras/JavaPOOActividadExtra3-1/build/
