Java Unit encuentro 1

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,9 @@
 /Java/JavaPOOEjerciciosExtras/Guia8_ejExtra03/build/
 /Java/JavaPOOActividadesExtras/JavaPOOActividadExtra3-1/nbproject/private/
 /Java/JavaPOOActividadesExtras/JavaPOOActividadExtra3-1/build/
+/Java/Java_JUnit/JavaJUnitEjemplo/nbproject/private/
+/Java/Java_JUnit/JavaJUnitEjemplo/build/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer1/nbproject/private/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer1/build/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer2/nbproject/private/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer2/build/
