Java JUnit Encuentro 2

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,7 @@
 /Java/Java_JUnit/Ejercicios/JavaJUnitEjer1/build/
 /Java/Java_JUnit/Ejercicios/JavaJUnitEjer2/nbproject/private/
 /Java/Java_JUnit/Ejercicios/JavaJUnitEjer2/build/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer3/nbproject/private/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer3/build/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer4/nbproject/private/
+/Java/Java_JUnit/Ejercicios/JavaJUnitEjer4/build/
