--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,5 @@
 /Java/javaRelacionClases/ejercicios extra/JavaRelacionesClasesEjerExtra2/nbproject/private/
 /Java/javaRelacionClases/ejercicios extra/JavaRelacionesClasesEjerExtra2/build/
 /Java/javaRelacionClases/ejercicios extra/JavaRelacionesClasesEjerExtra3/nbproject/private/
+/Java/javaRelacionClases/ejercicios extra/JavaRelacionesClasesEjerExtra4/nbproject/private/
+/Java/javaRelacionClases/ejercicios extra/JavaRelacionesClasesEjerExtra4/build/
